src/objects/FinancialAward__c.object
<CustomObject>
    <description>Details information specific to each scholarship/fund that can be awarded to a student.</description>
    <fields>
        <fullName>AcceptAmount__c</fullName>
        <description>The amount of the award that was accepted</description>
        <inlineHelpText>The amount of the award that was accepted</inlineHelpText>
        <label>Accept Amount</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Authorized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to authorize release of payment of VA Contract</description>
        <inlineHelpText>Yes to authorize Va Contract payment</inlineHelpText>
        <label>Authorized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AwardDate__c</fullName>
        <description>Date student&apos;s funds are awarded.</description>
        <label>Award Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AwardStatusDate__c</fullName>
        <description>The date the status of the award was updated</description>
        <inlineHelpText>The date the status of the award was updated</inlineHelpText>
        <label>Award Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BannerRowID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Rowid of banner record</description>
        <externalId>true</externalId>
        <label>Banner RowID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DeclineAmount__c</fullName>
        <description>The amount declined by the student</description>
        <inlineHelpText>The amount declined by the student</inlineHelpText>
        <label>Decline Amount</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the fund should be deleted</description>
        <inlineHelpText>Whether or not the fund should be deleted</inlineHelpText>
        <label>Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAAidYear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Aid year to which this award belongs to</description>
        <inlineHelpText>The Aid year to which this award belongs to</inlineHelpText>
        <label>FA Aid Year</label>
        <referenceTo>Year__c</referenceTo>
        <relationshipLabel>Financial Awards</relationshipLabel>
        <relationshipName>FinancialAwards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinancialApplication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look-up field linking Financial Award to Financial Application</description>
        <label>Financial Application</label>
        <referenceTo>FinancialApplication__c</referenceTo>
        <relationshipLabel>Financial Awards</relationshipLabel>
        <relationshipName>FinancialAwards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinancialAwardStatus__c</fullName>
        <description>Financial Award Status from the financial application object.</description>
        <formula>TEXT (FinancialApplication__r.AwardStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Award Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinancialFund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to financial fund</description>
        <label>Financial Fund</label>
        <referenceTo>Financial_Fund__c</referenceTo>
        <relationshipLabel>Financial Awards</relationshipLabel>
        <relationshipName>FinancialAwards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Imported__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the fund was imported, to stop email workflows for imports</description>
        <label>Imported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NumberOfTerms__c</fullName>
        <description>The number of terms an award is spread across.</description>
        <label>Number Of Terms</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfferAmount__c</fullName>
        <description>Amount Offered to the student</description>
        <inlineHelpText>Amount Offered to the student</inlineHelpText>
        <label>Offer Amount</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OriginalOfferAmount__c</fullName>
        <description>Amount the offer was when it was first created</description>
        <inlineHelpText>Amount the offer was when it was first created</inlineHelpText>
        <label>Original Offer Amount</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ScholarshipFundTitle__c</fullName>
        <description>Formula field inserting FundTitle__c from the Financial_Fund__c object.</description>
        <formula>FinancialFund__r.FundTitle__c</formula>
        <label>Scholarship Fund Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The Status of the students award</description>
        <inlineHelpText>The Status of the students award</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>ACTIVE</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CANCELLED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DROPPED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GRADUATED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REMOVED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StudentFirstName__c</fullName>
        <description>Student First Name from Financial Application from Account.</description>
        <formula>FinancialApplication__r.StudentFirstName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentLastName__c</fullName>
        <description>Student Last Name from the Financial Application.</description>
        <formula>FinancialApplication__r.StudentLastName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentSFID__c</fullName>
        <formula>FinancialApplication__r.Student__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student SF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Email__c</fullName>
        <description>Student Email populated by workflow from Financial Application.</description>
        <label>Student Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TermAmount__c</fullName>
        <description>The total amount to be paid out each term.</description>
        <label>Term Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Term of the Award</description>
        <inlineHelpText>The Term of the award for term specific awards</inlineHelpText>
        <label>Term</label>
        <referenceTo>Term__c</referenceTo>
        <relationshipLabel>Financial Awards</relationshipLabel>
        <relationshipName>FinancialAwards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <description>Total awarded fund amount.</description>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Financial Award</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>StudentFirstName__c</columns>
        <columns>StudentLastName__c</columns>
        <columns>Status__c</columns>
        <columns>NumberOfTerms__c</columns>
        <columns>FinancialFund__c</columns>
        <columns>TermAmount__c</columns>
        <columns>TotalAmount__c</columns>
        <columns>FinancialAwardStatus__c</columns>
        <columns>FinancialApplication__c</columns>
        <columns>AwardDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Financial Award Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Awards</pluralLabel>
    <recordTypes>
        <fullName>FinancialAid</fullName>
        <active>true</active>
        <description>Record Type for use in Financial Aid</description>
        <label>Financial Aid</label>
    </recordTypes>
    <recordTypes>
        <fullName>Scholarship</fullName>
        <active>true</active>
        <description>Scholarship Financial Award Record</description>
        <label>Scholarship</label>
    </recordTypes>
    <recordTypes>
        <fullName>ThirdParty</fullName>
        <active>true</active>
        <description>Third Party Award</description>
        <label>Third Party</label>
    </recordTypes>
    <recordTypes>
        <fullName>VA</fullName>
        <active>true</active>
        <description>Financial award for VA</description>
        <label>VA</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>